# Objektinis-4

./: CMakeLists.txt  README.md  main.cpp  tekstas.md  testai.cpp
